--- a/Development/pawpal/package.json
+++ b/Development/pawpal/package.json
@@ -20,6 +20,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "preinstall": "icacls node_modules\\.bin\\* /grant Everyone:(RX)",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
